@@ -42,6 +42,7 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     - Use it to build the .deb control member in dpkg-deb.
     Closes: #719845
     - Use it with dpkg --recursive option.
+  * Unify start-stop-daemon --help output with the rest of the tools.
   * Portability:
     - Move DPKG_ADMINDIR environment variable name out from update-alternatives
       code, to make life easier for non-dpkg-based systems.
